<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/expensesContainer"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:background="@drawable/background"
    app:layout_constraintTop_toBottomOf="@+id/expensesTextView"
    android:paddingBottom="@dimen/margin_fragmentIncome">


    <TextView
        style="@style/DashboardContainerView.titleName"
        android:id="@+id/groceryContainerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/groceryContainerImageView"
        app:layout_constraintEnd_toEndOf="@+id/groceryContainerImageView"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_expensesGroceries" />

    <ImageView
        style="@style/DashboardContainerView.image"
        android:id="@+id/groceryContainerImageView"
        android:src="@drawable/baseline_add_shopping_cart_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groceryContainerTextView"/>

    <TextView
        style="@style/DashboardContainerView.titleSum"
        android:id="@+id/grocerySumContainerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_expensesGroceriesSum"
        app:layout_constraintTop_toBottomOf="@id/groceryContainerImageView"
        app:layout_constraintStart_toStartOf="@id/groceryContainerImageView"
        app:layout_constraintEnd_toEndOf="@id/groceryContainerImageView"/>


    <TextView
        style="@style/DashboardContainerView.titleName"
        android:id="@+id/transportContainerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/transportContainerImageView"
        app:layout_constraintEnd_toEndOf="@id/transportContainerImageView"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_expensesTransport" />

    <ImageView
        style="@style/DashboardContainerView.image"
        android:id="@+id/transportContainerImageView"
        android:src="@drawable/baseline_emoji_transportation_24"
        app:layout_constraintStart_toEndOf="@id/groceryContainerImageView"
        app:layout_constraintTop_toBottomOf="@id/transportContainerTextView"/>

    <TextView
        style="@style/DashboardContainerView.titleSum"
        android:id="@+id/transportSumContainerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/transportContainerImageView"
        app:layout_constraintEnd_toEndOf="@id/transportContainerImageView"
        app:layout_constraintTop_toBottomOf="@id/transportContainerImageView"
        android:text="@string/title_expensesTransportSum" />


    <TextView
        style="@style/DashboardContainerView.titleName"
        android:id="@+id/entertainmentContainerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_expensesEntertainment"
        app:layout_constraintTop_toBottomOf="@+id/grocerySumContainerTextView"
        app:layout_constraintStart_toStartOf="@+id/entertainmentContainerImageView"
        app:layout_constraintEnd_toEndOf="@id/entertainmentContainerImageView"/>

    <ImageView
        style="@style/DashboardContainerView.image"
        android:id="@+id/entertainmentContainerImageView"
        android:src="@drawable/baseline_beach_access_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entertainmentContainerTextView"
        />

    <TextView
        style="@style/DashboardContainerView.titleSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_expensesEntertainmentSum"
        app:layout_constraintTop_toBottomOf="@id/entertainmentContainerImageView"
        app:layout_constraintStart_toStartOf="@id/entertainmentContainerImageView"
        app:layout_constraintEnd_toEndOf="@id/entertainmentContainerImageView"/>


    <TextView
        style="@style/DashboardContainerView.titleName"
        android:id="@+id/textViewHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_expensesHouse"
        app:layout_constraintTop_toBottomOf="@id/transportSumContainerTextView"
        app:layout_constraintStart_toStartOf="@id/imageHouse"
        app:layout_constraintEnd_toEndOf="@id/imageHouse"
        />

    <ImageView
        style="@style/DashboardContainerView.image"
        android:id="@+id/imageHouse"
        android:src="@drawable/baseline_house_24"
        app:layout_constraintTop_toBottomOf="@+id/textViewFood"
        app:layout_constraintStart_toEndOf="@id/imageFood" />

    <TextView
        style="@style/DashboardContainerView.titleSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/imageHouse"
        app:layout_constraintEnd_toEndOf="@id/imageHouse"
        app:layout_constraintTop_toBottomOf="@id/imageHouse"
        android:text="@string/title_expensesHouseSum" />

    <TextView
        style="@style/DashboardContainerView.titleName"
        android:id="@+id/othersContainerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_expensesOthers"
        app:layout_constraintTop_toBottomOf="@id/transportSumContainerTextView"
        app:layout_constraintStart_toStartOf="@id/othersContainerImageView"
        app:layout_constraintEnd_toEndOf="@id/othersContainerImageView"
        />

    <ImageView
        style="@style/DashboardContainerView.image"
        android:id="@+id/othersContainerImageView"
        android:src="@drawable/baseline_drag_indicator_24"
        app:layout_constraintTop_toBottomOf="@+id/textViewHouse"
        app:layout_constraintStart_toEndOf="@id/imageHouse" />

    <TextView
        style="@style/DashboardContainerView.titleSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/imageFood"
        app:layout_constraintEnd_toEndOf="@id/imageFood"
        app:layout_constraintTop_toBottomOf="@id/imageFood"
        android:text="@string/title_expensesFoodSum" />

    <TextView
        style="@style/DashboardContainerView.titleName"
        android:id="@+id/textViewFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_expensesFood"
        app:layout_constraintTop_toBottomOf="@id/transportSumContainerTextView"
        app:layout_constraintStart_toStartOf="@id/imageFood"
        app:layout_constraintEnd_toEndOf="@id/imageFood"
        />

    <ImageView
        style="@style/DashboardContainerView.image"
        android:id="@+id/imageFood"
        android:src="@drawable/baseline_fastfood_24"
        app:layout_constraintTop_toBottomOf="@+id/textViewFood"
        app:layout_constraintStart_toEndOf="@id/entertainmentContainerImageView" />

    <TextView
        style="@style/DashboardContainerView.titleSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/othersContainerImageView"
        app:layout_constraintEnd_toEndOf="@id/othersContainerImageView"
        app:layout_constraintTop_toBottomOf="@id/othersContainerImageView"
        android:text="@string/title_expensesOthersSum" />

    <Spinner
        style="@style/DashboardContainerView.spinner"
        android:id="@+id/spinnerExpenses"
        app:layout_constraintTop_toTopOf="@id/transportContainerTextView" />

    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/editTextExpensesSum"
        style="@style/DashboardContainerView.editTextSpinner"
        app:layout_constraintBottom_toBottomOf="@id/transportSumContainerTextView"
        app:layout_constraintStart_toStartOf="@id/spinnerExpenses" />
    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/editTextExpensesSumMinus"
        style="@style/DashboardContainerView.editTextSpinner"
        app:layout_constraintBottom_toTopOf="@+id/editTextExpensesSum"
        app:layout_constraintStart_toStartOf="@id/spinnerExpenses" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextExpensesSum"
        app:layout_constraintStart_toEndOf="@+id/editTextExpensesSum"
        app:layout_constraintTop_toTopOf="@+id/editTextExpensesSum" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextExpensesSumMinus"
        app:layout_constraintStart_toEndOf="@+id/editTextExpensesSumMinus"
        app:layout_constraintTop_toTopOf="@+id/editTextExpensesSumMinus" />


</androidx.constraintlayout.widget.ConstraintLayout>