<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.dashboard.salary.SalaryFragment">


    <TextView
        android:id="@+id/salaryFragmentTextView"
        style="@style/DashboardFragmentTextView.title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/title_incomeSalary" />

    <TextView
        android:id="@+id/salarySumTextView"
        style="@style/DashboardFragmentTextView.title"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title_incomeSum" />

    <EditText
        android:id="@+id/salaryFragmentEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_entrySalary"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/addSalaryFragmentImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salaryFragmentTextView" />

    <ImageView
        android:id="@+id/addSalaryFragmentImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_circle_24"
        app:flow_horizontalBias="0"
        app:layout_constraintStart_toEndOf="@+id/salaryFragmentEditText"
        app:layout_constraintTop_toTopOf="@+id/salaryFragmentEditText"
        app:layout_constraintBottom_toBottomOf="@+id/salaryFragmentEditText"
        app:layout_constraintLeft_toLeftOf="@id/salaryFragmentEditText"
        app:tint="@color/purple_700" />

    <TextView
        style="@style/DashboardFragmentTextView.list"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/listOfSalariesTitleFragmentTextView"
        android:text="@string/listOf_salaries"
        app:layout_constraintTop_toBottomOf="@id/salaryFragmentEditText"
        app:layout_constraintStart_toStartOf="@+id/salaryFragmentTextView"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/listOfSalariesTitleFragmentTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>